--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   isar: ^3.0.5
+  isar_generator: ^3.0.5
+  build_runner: ^2.3.3
+  path_provider: ^2.0.12
+  isar_flutter_libs: ^3.0.5
 
 dev_dependencies:
   flutter_test:
