--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   build_runner: ^2.3.3
   path_provider: ^2.0.12
   isar_flutter_libs: ^3.0.5
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
